<resources>
    <string name="app_name">Whac-A-Mole</string>
    <string name="game_description">Whack more moles in 30 seconds</string>
    <string name="start">Start</string>
    <string name="best_score">Best score:</string>
    <string name="score">Score:</string>
    <string name="new_record">New record!</string>
    <string name="play_again">Play again</string>
    <string name="menu">Menu</string>
</resources>