<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    android:background="@color/green_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_score"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/yellow"/>
        <TextView
            android:id="@+id/bestScoreMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="0"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/yellow"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="140dp"
        android:textColor="@color/brown_500"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/game_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/brown_200"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_weight="0.5"
        android:text="@string/start"
        android:layout_gravity="center"
        />


</LinearLayout>